--- a/src/com/ale/view/BookViewA.fxml
+++ b/src/com/ale/view/BookViewA.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="429.0" prefWidth="649.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ale.view.JadwalView">
+<AnchorPane prefHeight="429.0" prefWidth="649.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ale.controller.BookAController">
    <children>
       <HBox prefHeight="30.0" prefWidth="649.0">
          <children>
