--- a/src/com/ale/view/History.fxml
+++ b/src/com/ale/view/History.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ale.tubespbo.controller.HistoryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ale.controller.HistoryController">
    <children>
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="600.0">
         <menus>
@@ -40,119 +34,15 @@
             </Text>
          </children>
       </VBox>
-      <VBox layoutX="29.0" layoutY="92.0" prefHeight="161.0" prefWidth="509.0">
-         <children>
-            <HBox prefHeight="36.0" prefWidth="509.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Booking ID ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="LabelBookingID" prefHeight="21.0" prefWidth="161.0" text=": ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox prefHeight="36.0" prefWidth="509.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Tempat Vaksin  ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="LabelTempatVaksin" prefHeight="21.0" prefWidth="165.0" text=": ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="46.0" prefHeight="36.0" prefWidth="509.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Jenis Vaksin ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="LabelJenisVaksin" prefHeight="21.0" prefWidth="167.0" text=": ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="82.0" prefHeight="36.0" prefWidth="509.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Tgl / jam vaksin ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="LabelJamVaksin" prefHeight="21.0" prefWidth="169.0" text=": ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="118.0" prefHeight="36.0" prefWidth="509.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Status  ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="LabelStatus" prefHeight="21.0" prefWidth="177.0" text=": ">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+      <TableView fx:id="tableHistory" layoutX="32.0" layoutY="100.0" onMouseClicked="#selectedRow" prefHeight="238.0" prefWidth="515.0">
+        <columns>
+          <TableColumn fx:id="colBookId" prefWidth="84.0" text="Booking ID" />
+          <TableColumn fx:id="colTempat" prefWidth="119.0" text="Tempat" />
+            <TableColumn fx:id="colJenisV" prefWidth="101.0" text="Jenis Vaksin" />
+            <TableColumn fx:id="colJamV" prefWidth="94.0" text="Jam" />
+            <TableColumn fx:id="colTglV" prefWidth="116.0" text="Tanggal Vaksin" />
+        </columns>
+      </TableView>
+      <Button layoutX="488.0" layoutY="352.0" mnemonicParsing="false" onAction="#printAction" text="Print " />
    </children>
 </AnchorPane>
